testsuite/poke.pkl/neg-f32-diag-1.pk
/* { dg-do compile } */

var res
  = .- 0H; /* { dg-error "invalid operand .*" } */
